--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,8 @@
                 "JiraRestApi": "Supsign\\LaravelJiraRest\\JiraRestApi"
             }
         }
-    }
+    },
+    "require": {
+        "supsign/base-api": "^1.0"
+    },
 }
